manifests/kustomize/base/metadata/options/istio/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: metadata-grpc-service
spec:
  action: ALLOW
  selector:
    matchLabels:
      component: metadata-grpc-server
  rules:
  - {}

---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: metadata-grpc-service
spec:
  host: metadata-grpc-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
